@@ -222,6 +222,9 @@ CustomScreenDPI = 0
 <span class=cm id="ShowTabBar">if true, we show a tab bar and perform tabbed navigation (introduced in version 2.6)</span>
 ShowTabBar = false
 
+<span class=cm id="FullPathInTitle">if true, we show the full path to a file in the title bar (introduced in version 2.6)</span>
+FullPathInTitle = false
+
 <span class=cm id="AnnotationDefaults">default values for user added annotations in FixedPageUI documents (preliminary and still subject to 
 change)</span>
 AnnotationDefaults [
